# DeployProjectDoxygenDocumentationOnGithubExample

./: CMakeLists.txt  README.md  files.html  main.cpp  main_8cpp.html
.github/workflows/: deploy_pages.yml
html/: files.html  main_8cpp.html
latex/: main_8cpp.tex
